--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,16 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation "com.yuyakaido.android:card-stack-view:2.3.2"
+    implementation 'com.yuyakaido.android:card-stack-view:2.3.2'
+    implementation 'com.google.guava:guava:26.0-android'
 }
 
 apply plugin: 'com.google.gms.google-services'
