--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -41,6 +44,7 @@ dependencies {
     implementation 'com.yuyakaido.android:card-stack-view:2.3.2'
     implementation 'com.google.guava:guava:26.0-android'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
 
