--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:18.0.0'
     implementation 'com.firebaseui:firebase-ui-storage:5.0.0'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.guava:guava:26.0-android'
     implementation 'com.google.code.gson:gson:2.8.5'
 
